--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     /* border: red dotted 1px; */
     align-items: center;
     justify-content: center;
+    margin: 10px;
 }
 
 .left {
@@ -44,6 +45,7 @@ body {
     border-radius: 4px;
     width: 400px;
     height: 400px;
+    margin: 10px;
     padding: 10px;
 }
 
