Align status text to bottom, overflow on top
I'm going to call this one complete.
There's a dozen little improvements that could be done,
but right now I want to push on to new content.

--- a/style.css
+++ b/style.css
@@ -40,14 +40,22 @@ body {
     flex-direction: column;
 }
 
-#status {
+#status-box {
     border: 3px solid black;
     border-radius: 4px;
     width: 400px;
     height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow:hidden;
+}
+
+#status {
     margin: 10px;
     padding: 10px;
     white-space: pre-line;
+    text-align: center;
 }
 
 button {
